--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <h1 class="brand">&lt;&#47;Code&gt;</h1>
     <ul class="unorder-list">
     <li class="item-list">
-     <a class="link" href="/">Home</a>
+     <a class="link link-active" href="/">Home</a>
      </li>
      <li class="item-list">
-    <a class="link" href="/">Projects</a>
+    <a class="link" href="/projects.html">Projects</a>
     </li>
     <li class="item-list">
-    <a class="link" href="/">Blogs</a>
+    <a class="link" href="/blogs.html">Blogs</a>
     </li>
     </ul>
 </nav>
@@ -32,7 +32,7 @@
 <h1 class="hi">Hi!</h1>
 <h2 class="about">Welcome to my webpage,I'm Hruthik. <br>                                                                
     I'm <strong class="bca"> BCA Graduate</strong>, learning <strong class="bca"> Full Stack Web Development </strong>and intersted <strong class="bca" ></strong>in web-3 </strong>.<br>
-    I think this is best way to showcase my skills feel free to check out my projects and blogs.
+    I think this is best way to showcase my skills. Feel free to check out my projects and blogs.
 </h2>
 <div >
     <a href="/QBANK.pdf"  download><h1 class="pdf">Download CV 📥</h1></a>
@@ -44,19 +44,19 @@
 <h1 class="bca">Technologies</h1>
 <p class="text">I'm Familiar With HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS, and Web Hosting</p>
     </div>
-<!-- <hr width="177%"> --></Br>
+</Br>
 <div class="navigation">
 <h1 class="bca">Projects</h1>
 <p class="text">I Like to showcase my work and thus,you can see my projects hosted online</p>
-<a class="bca" href="/">BROWSE PROJECTS</a>
+<a class="bca" href="/projects.html">BROWSE PROJECTS</a>
 </div>
-<!-- <hr width="177%"> --><Br></Br>
+<Br></Br>
 <div class="navigation">
 <h1 class="bca">Blogs</h1>
 <p class="text">I am also working on some technical and non technical blogs. I like to document my journey of learning.</p>
 <a class="bca" href="/">READ BLOGS</a>
 </div>
-<!-- <hr width="177%"> --><br></br>
+<br></br>
 </div>  
 
 <footer class="footer">
