--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
 </nav>
 <header>
-    <!-- <img class="background" src="images/background.jpg" /> -->
+    <img class="background" src="images/background.jpg" />
     <img class="img" src="images/photo.jpg" />
     
 </header>
