--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </ul>
 </nav>
 <header>
-    <img class="background" src="images/background.jpg" />
+    <!-- <img class="background" src="images/background.jpg" /> -->
     <img class="img" src="images/photo.jpg" />
     
 </header>
 
 <h1 class="hi">Hi!</h1>
-<h2 class="about">Welcome to my webpage,I'm Hruthik. <br>                                                                
+<p class="about">Welcome to my webpage,I'm Hruthik. <br>                                                                
     I'm <strong class="bca"> BCA Graduate</strong>, learning <strong class="bca"> Full Stack Web Development </strong>and intersted <strong class="bca" ></strong>in web-3 </strong>.<br>
     I think this is best way to showcase my skills. Feel free to check out my projects and blogs.
-</h2>
+</p>
 <div >
     <a href="/QBANK.pdf"  download><h1 class="pdf">Download CV 📥</h1></a>
 </div>
