--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navigation container"> 
+    <nav class="navigation"> 
     <h1 class="brand">&lt;&#47;Code&gt;</h1>
     <ul class="unorder-list">
     <li class="item-list">
@@ -24,7 +24,7 @@
     </ul>
 </nav>
 <header>
-    <!-- <img class="background" src="images/background.jpg" /> -->
+    <img class="background" src="images/background.jpg" />
     <img class="img" src="images/photo.jpg" />
     
 </header>
